# BDSyS-eC

./: .dockerignore  .env_sample  .gitignore  Makefile  README.md  chatbot_app.py  docker-compose.yml  pyproject.toml  streamlit.dockerfile
docker/: docker-compose.yml  streamlit.dockerfile
notebooks/: data_analysis.ipynb
pipelines/config/: pipeline_config.yaml
pipelines/dags/: ecommerce_etl_dag.py
pipelines/spark_jobs/: bronze_to_silver.py  silver_to_gold.py
reports/: BDSyS-eC.pbix
scripts/: check_data.py  entrypoint.sh  test_conn.py
