[project]
name = "BDSyS-eC"
version = "0.1.0"
description = "Pipeline ETL de E-commerce y Chatbot de Analítica"
authors = ["Arturo"]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "sqlalchemy>=1.4.54",
    "psycopg2-binary>=2.9.10",
    "pendulum>=3.1.0",
    "pyarrow>=20.0.0",
]

[project.optional-dependencies]
streamlit = [
    "streamlit>=1.46.0",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.0.10",
    "google-generativeai>=0.8.5",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.24",
]

airflow = [
    "apache-airflow>=3.0.2",
    "apache-airflow-providers-apache-spark>=5.3.0",
    "flask-appbuilder>=4.7.0",
]

spark = [
    "pyspark>=4.0.0",
]

notebook = [
    "pandas>=2.3.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "ipykernel>=6.29.5",
    "kaggle>=1.7.4.5",
]
